# listenarr-testdata

./: .gitignore  LICENSE  README.md  TESTING.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml  corpus-drift.yml  ffmpeg-drift.yml  ffprobe-cross-platform.yml  release.yml
corpus/: cases.py  corpus.json
docs/: index.html  layouts.js  layouts.test.mjs
reviews/: sr-dev-review.md
tests/: test_conformance_diff.py  test_fetch_ffprobe.py  test_ffmpeg_harness.py  test_ffprobe_equivalence.py  test_ffprobe_provisioner.py  test_generation.py  test_install_ffbinary.py  test_layout_override.py  test_package_ffbinary.py  test_package_ffprobe.py  test_paths.py  test_picker_js.py  test_tag_states.py  test_targeting.py  test_validate_hardlink.py  test_validate_sidecar_rename.py  test_verify_scan.py  test_vet_against.py
tests/fixtures/: eq-golden.json
tests/fixtures/eqcorpus/: sample.aac  sample.flac  sample.m4a  sample.m4b  sample.opus
tools/: benchmark_scan.sh  build_corpus.py  conformance_diff.py  fetch_ffprobe.py  ffmpeg_harness.py  ffprobe_equivalence.py  ffprobe_provisioner.py  generate_library.py  install_ffbinary.py  package_ffbinary.py  package_ffprobe.py  validate_hardlink.sh  validate_sidecar_rename.sh  verify_scan.py  vet-against.sh
